--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -60,7 +60,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "git-user-name": "^2.0.0"
+    "git-user-name": "^2.0.0",
+    "vsls": "^0.3.1291"
   },
   "extensionDependencies": [
     "ms-vsliveshare.vsliveshare",
