--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -56,7 +56,6 @@
         "@types/keytar": "^4.4.2",
         "@types/node": "^8.10.25",
         "@types/node-fetch": "^2.5.4",
-        "@types/pretty-time": "^1.1.0",
         "copy-webpack-plugin": "^5.0.5",
         "ts-loader": "^6.2.1",
         "tslint": "^5.8.0",
@@ -69,7 +68,7 @@
     "dependencies": {
         "git-user-name": "^2.0.0",
         "node-fetch": "^2.6.0",
-        "pretty-time": "^1.1.0",
+        "pretty-ms": "^5.1.0",
         "vsls": "^1.0.1526"
     },
     "extensionDependencies": [
