working on temporary sessions

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -53,6 +53,11 @@
                     "dark": "images/dark/cross-icon.svg",
                     "light": "images/light/cross-icon.svg"
                 }
+            },
+            {
+                "command": "togezr.shareInto",
+                "title": "Share into",
+                "category": "Togezr"
             }
         ],
         "menus": {
