--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,7 +1,7 @@
 {
     "name": "togezr",
     "displayName": "Togezr",
-    "description": "Better together.",
+    "description": "Better together_",
     "publisher": "vsls-contrib",
     "version": "0.1.0",
     "icon": "images/icon.png",
