--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "node-fetch": "^2.6.0",
     "pretty-ms": "^5.1.0"
   },
   "devDependencies": {}
