--- a/github-bot/package.json
+++ b/github-bot/package.json
@@ -16,7 +16,7 @@
     "is-base64": "^1.0.0"
   },
   "devDependencies": {
-    "@azure/functions": "^1.0.2-beta2",
+    "@azure/functions": "^1.2.0",
     "@types/node": "^13.7.7",
     "typescript": "^3.3.3"
   }
