--- a/github-bot/package.json
+++ b/github-bot/package.json
@@ -13,7 +13,8 @@
     "@octokit/app": "^4.2.0",
     "@octokit/rest": "^17.0.0",
     "github-api": "^3.3.0",
-    "is-base64": "^1.0.0"
+    "is-base64": "^1.0.0",
+    "pretty-ms": "^6.0.1"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.0",
