--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -230,6 +230,7 @@
         "test": "yarn compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "@types/emoji-js": "^3.4.0",
         "@types/keytar": "^4.4.2",
         "@types/node": "^8.10.25",
         "@types/node-fetch": "^2.5.4",
@@ -245,6 +246,7 @@
     "dependencies": {
         "@slack/web-api": "^5.8.0",
         "@types/uuid": "^3.4.7",
+        "emoji-js": "^3.5.0",
         "git-user-name": "^2.0.0",
         "node-fetch": "^2.6.0",
         "pretty-ms": "^5.1.0",
