--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -114,6 +114,15 @@
                 }
             },
             {
+                "command": "togezr.openAccountInBrowser",
+                "title": "Open in browser",
+                "category": "Togezr",
+                "icon": {
+                    "dark": "images/dark/open-icon.svg",
+                    "light": "images/light/open-icon.svg"
+                }
+            },
+            {
                 "command": "togezr.openConnectorInBrowser",
                 "title": "Open connector in browser",
                 "category": "Togezr",
@@ -169,6 +178,11 @@
                     "group": "inline@1"
                 },
                 {
+                    "command": "togezr.openAccountInBrowser",
+                    "when": "viewItem == togezr.account.channel.tree.item",
+                    "group": "inline@1"
+                },
+                {
                     "command": "togezr.openConnectorInBrowser",
                     "when": "viewItem == togezr.connector.openable",
                     "group": "inline@1"
@@ -185,7 +199,7 @@
                 },
                 {
                     "command": "togezr.shareIntoAccount",
-                    "when": "viewItem == togezr.share-into.tree.item",
+                    "when": "viewItem == togezr.account.channel.tree.item",
                     "group": "inline@1"
                 }
             ],
