--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -154,6 +154,15 @@
                 "title": "Add repo",
                 "category": "Togezr",
                 "icon": {
+                    "dark": "images/dark/add-icon.svg",
+                    "light": "images/light/add-icon.svg"
+                }
+            },
+            {
+                "command": "togezr.removeGitHubAccountRepo",
+                "title": "Remove repo",
+                "category": "Togezr",
+                "icon": {
                     "dark": "images/dark/cross-icon.svg",
                     "light": "images/light/cross-icon.svg"
                 }
@@ -188,7 +197,7 @@
                 },
                 {
                     "command": "togezr.openAccountInBrowser",
-                    "when": "viewItem == togezr.account.channel.tree.item || viewItem == togezr.account.channel.tree.item.openable",
+                    "when": "viewItem == togezr.channel.tree.item || viewItem == togezr.channel.tree.item.openable || viewItem == togezr.account.github.repo",
                     "group": "inline@1"
                 },
                 {
@@ -203,12 +212,22 @@
                 },
                 {
                     "command": "togezr.removeAccount",
-                    "when": "viewItem == togezr.account",
+                    "when": "viewItem =~ /togezr\\.account\\.(github|slack|teams)$/",
                     "group": "inline@1"
                 },
                 {
                     "command": "togezr.shareIntoAccount",
-                    "when": "viewItem == togezr.account.channel.tree.item",
+                    "when": "viewItem == togezr.channel.tree.item",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "togezr.addGitHubAccountRepo",
+                    "when": "viewItem == togezr.account.github",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "togezr.removeGitHubAccountRepo",
+                    "when": "viewItem == togezr.account.github.repo",
                     "group": "inline@1"
                 }
             ],
