working on GHPR integration

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -262,6 +262,12 @@
                     "id": "togezr.activitybar",
                     "name": "Togezr"
                 }
+            ],
+            "!liveshare": [
+                {
+                    "id": "togezr.liveshare.teams.contacts",
+                    "name": "Teams"
+                }
             ]
         }
     },
