--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -24,6 +24,7 @@
         "*"
     ],
     "main": "./out/prod/extension.js",
+    "types": "./serc/types.d.ts",
     "contributes": {
         "commands": [
             {
@@ -281,6 +282,7 @@
         "@types/node": "^8.10.25",
         "@types/node-fetch": "^2.5.4",
         "copy-webpack-plugin": "^5.0.5",
+        "nerdbank-gitversioning": "^3.1.91",
         "ts-loader": "^6.2.1",
         "tslint": "^5.8.0",
         "typescript": "^3.1.4",
