--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -276,9 +276,10 @@
         "test": "yarn compile && node ./node_modules/vscode/bin/test",
         "build-extension": "node ./scripts/copy-release-files.js",
         "build-all": "yarn build:webpack && node ./scripts/copy-files.js",
-        "module-pack": "yarn build-all && cd ./out/prod && yarn pack",
-        "module-publish": "standard-version && yarn build-all && yarn publish && yarn extension-pack",
-        "extension-pack": "yarn build-all && cd ./out/prod && vsce package --yarn"
+        "module-pack": "rimraf ./out && yarn build-all && cd ./out/prod && yarn pack",
+        "module-publish": "rimraf ./out && yarn build-all && cd ./out/prod && yarn publish",
+        "extension-pack": "rimraf ./out &&  yarn build-all && cd ./out/prod && vsce package --yarn",
+        "publish": "rimraf ./out && standard-version && yarn build-all && yarn publish && yarn extension-pack"
     },
     "devDependencies": {
         "@types/emoji-js": "^3.4.0",
@@ -287,6 +288,7 @@
         "@types/node-fetch": "^2.5.4",
         "fs-extra": "^9.0.0",
         "husky": "^4.2.5",
+        "rimraf": "^3.0.2",
         "standard-version": "^7.1.0",
         "ts-loader": "^6.2.1",
         "tslint": "^5.8.0",
